--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": ">=7.4",
         "longman/telegram-bot": "^0.70",
-        "telegram-bot/api": "^2.3"
+        "telegram-bot/api": "^2.3",
+        "irazasyed/telegram-bot-sdk": "^3.15"
     },
     "autoload": {
         "psr-4": {
@@ -13,4 +14,3 @@
         }
     }
 }
-
